connect frontend to render backend

--- a/index.html
+++ b/index.html
@@ -766,6 +766,10 @@
 </head>
 <body>
     <!-- WhatsApp Status -->
+     <div class="whatsapp-button" id="whatsappButton">
+        <i class="fab fa-whatsapp"></i>
+        <div class="notification-badge">3</div>
+    </div>
     
     </div>
 
@@ -932,7 +936,7 @@
                 Une interface moderne conçue avec passion pour offrir la meilleure expérience utilisateur. Simple, élégant et efficace.
                 <br><br>
                 <i class="fab fa-whatsapp" style="color: #25D366;"></i>
-                <strong>Support WhatsApp :</strong> Disponible du Dimanche au vendredi, 9h-18h
+                <strong>Support WhatsApp :</strong> Disponible du Dimanche au jeudi, 9h-18h
             </p>
             
             <div class="copyright">
