fix whatsapp button click

--- a/index.html
+++ b/index.html
@@ -764,6 +764,19 @@
         }
     </style>
 </head>
+<!-- WhatsApp Floating Button -->
+<a
+  href="https://wa.me/213549431052"
+  target="_blank"
+  class="whatsapp-button"
+  aria-label="Contact WhatsApp"
+>
+  <i class="fab fa-whatsapp"></i>
+</a>
+
+</body>
+</html>
+
 <body>
     <!-- WhatsApp Status -->
      <div class="whatsapp-button" id="whatsappButton">
