--- a/index.html
+++ b/index.html
@@ -764,7 +764,10 @@
         }
     </style>
 </head>
-<!-- WhatsApp Floating Button -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
 <a
   href="https://wa.me/213549431052"
   target="_blank"
